Fixed New Download Manager view height.

Setting layoutMargins on iOS 10 had no effect, so the view did not have
any padding (the view hight was the same as statusLabel.heightAnchor).

Setting directionalLayoutMargins only added top and bottom margins,
not left and right, so using directionalLayoutMargins was not super
useful either.

This CL simply adds shadow height constant to
view.layoutMarginsGuide.topAnchor, which looks cleaner (no OS version
conditions and actually work on iOS 10).

Bug: 813979
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I574651f8ce459e57667550a67bf68d6e038d74e3
Reviewed-on: https://chromium-review.googlesource.com/927605
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539319}
Former-commit-id: 6ba6fba31775b7c731be6382281933d2ae17f3bd